Update ms example-article ca