@@ -5,24 +5,22 @@ import static java.util.stream.StreamSupport.stream;
 import java.lang.reflect.ParameterizedType;
 import java.util.List;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 import org.reactivecommons.utils.ObjectMapper;
 import org.springframework.data.domain.Example;
 import org.springframework.data.repository.CrudRepository;
 import org.springframework.data.repository.query.QueryByExampleExecutor;
 
-public abstract class AdapterOperations<
-    E, D, I, R extends CrudRepository<D, I> & QueryByExampleExecutor<D>> {
+public abstract class AdapterOperations<E, D, I, R extends CrudRepository<D, I> & QueryByExampleExecutor<D>> {
   protected R repository;
-  private Class<D> dataClass;
+  private final Class<D> dataClass;
   protected ObjectMapper mapper;
-  private Function<D, E> toEntityFn;
+  private final Function<D, E> toEntityFn;
 
+  @SuppressWarnings("unchecked")
   protected AdapterOperations(R repository, ObjectMapper mapper, Function<D, E> toEntityFn) {
     this.repository = repository;
     this.mapper = mapper;
-    ParameterizedType genericSuperclass =
-        (ParameterizedType) this.getClass().getGenericSuperclass();
+    ParameterizedType genericSuperclass = (ParameterizedType) this.getClass().getGenericSuperclass();
     this.dataClass = (Class<D>) genericSuperclass.getActualTypeArguments()[1];
     this.toEntityFn = toEntityFn;
   }
@@ -41,12 +39,12 @@ public abstract class AdapterOperations<
   }
 
   protected List<E> saveAllEntities(List<E> entities) {
-    List<D> list = entities.stream().map(this::toData).collect(Collectors.toList());
+    List<D> list = entities.stream().map(this::toData).toList();
     return toList(saveData(list));
   }
 
   public List<E> toList(Iterable<D> iterable) {
-    return stream(iterable.spliterator(), false).map(this::toEntity).collect(Collectors.toList());
+    return stream(iterable.spliterator(), false).map(this::toEntity).toList();
   }
 
   protected D saveData(D data) {
